Cleanup high contrast issue with BeanMachine thumbnail and resize issues with new portfolio thumbnails.

--- a/s.css
+++ b/s.css
@@ -197,13 +197,8 @@ they wouldn't be centered now would they? */
   box-shadow: 0 0 15px 0;
 }
 
-/* horizontal scrolling on phones is so yucky... so let's shrink the images */
-.pthumb  img{
-  max-width: 100%;
-}
-
-/* avoid horizontal scrolling */
-.rpic {
+/* horizontal scrolling on phones is so yucky... so let's shrink the images if they are too big to fit */
+.pthumb, .pthumb  img, .rpic {
   max-width: 100%;
 }
 
